--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,46 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>556</width>
-    <height>395</height>
+    <width>670</width>
+    <height>668</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Calculator</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QMainWindow {
+    background-color: #f5f5f5;
+}
+QPushButton {
+    background-color: #ffffff;
+    border: 1px solid #d1d1d1;
+    border-radius: 8px;
+    color: #333333;
+    font-size: 18px;
+    padding: 12px;
+    min-width: 60px;
+    min-height: 60px;
+    font-weight: bold;
+}
+QPushButton:hover {
+    background-color: #e8e8e8;
+}
+QPushButton:pressed {
+    background-color: #dcdcdc;
+}
+QLineEdit {
+    background-color: white;
+    border: 2px solid #d1d1d1;
+    border-radius: 10px;
+    color: #333333;
+    font-size: 28px;
+    padding: 15px;
+    selection-background-color: #4285f4;
+    selection-color: white;
+    text-align: right;
+    font-weight: bold;
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -354,7 +388,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>14</pointsize>
+          <pointsize>-1</pointsize>
           <bold>true</bold>
          </font>
         </property>
@@ -375,7 +409,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>556</width>
+     <width>670</width>
      <height>21</height>
     </rect>
    </property>
