--- a/replacedialog.ui
+++ b/replacedialog.ui
@@ -140,7 +140,7 @@
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="chkCase">
        <property name="text">
         <string>区分大小写</string>
        </property>
