--- a/searchdialog.ui
+++ b/searchdialog.ui
@@ -47,7 +47,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
-        <widget class="QCheckBox" name="checkBox">
+        <widget class="QCheckBox" name="chkCase">
          <property name="text">
           <string>区分大小写</string>
          </property>
@@ -85,17 +85,10 @@
      <item>
       <widget class="QPushButton" name="btnNext">
        <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
+        <font/>
        </property>
        <property name="styleSheet">
-        <string notr="true">    background-color: #4CAF50;    /* 背景色 */
-    border: none;                /* 无边框 */
-    color: white;                /* 文字颜色 */
-    padding: 10px 20px;          /* 内边距 */
-    font-size: 11px;             /* 字体大小 */
-    border-radius: 5px;          /* 圆角 */</string>
+        <string notr="true"/>
        </property>
        <property name="text">
         <string>查找下一个(&amp;F)</string>
@@ -107,10 +100,13 @@
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>40</height>
+         <height>30</height>
         </size>
        </property>
       </spacer>
@@ -118,12 +114,7 @@
      <item>
       <widget class="QPushButton" name="btnCancel">
        <property name="styleSheet">
-        <string notr="true">    background-color: #4CAF50;    /* 背景色 */
-    border: none;                /* 无边框 */
-    color: white;                /* 文字颜色 */
-    padding: 10px 20px;          /* 内边距 */
-    font-size:11px;             /* 字体大小 */
-    border-radius: 5px;          /* 圆角 */</string>
+        <string notr="true"/>
        </property>
        <property name="text">
         <string>取消</string>
